# wildfire_levelset

./: .gitignore  .gitmodules  ADVANCED_PHYSICS_FEATURES.md  CELL_SIZE_CORRECTION.md  CMakeLists.txt  FARSITE_FEATURES_IMPLEMENTATION.md  FIRE_MODELS.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_FIREBRAND_SPOTTING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SPATIAL_TRH.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  MVP_IMPLEMENTATION_SUMMARY.md  PHASE1_PHASE2_INTEGRATION_SUMMARY.txt  PHASE2_COMPLETION_REPORT.md  PYTHON_API_IMPLEMENTATION.md  README.md  SPOTTING_MODEL.md  TWO_WAY_COUPLING_SUMMARY.md  VORTICITY_SPOTTING_STATUS.md  behavior_matrix.csv  crown_fire_worksheet.csv  fire_stats.csv  ignition_probability.csv  inputs.i  terrain.xyz  test_terrain.txt  wildfires_reference.csv
regtest/: CMakeLists.txt  FAILSAFE_TESTS.md  README.md
regtest/3d_sphere/: inputs.i
regtest/albini_spotting/: README.md  inputs.i
regtest/alexander_lemniscate/: README.md
regtest/anderson_lw/: inputs.i
regtest/balbi_viegas_heatflux/: README.md
regtest/barrier_polygons/: create_barriers.py
regtest/basic_levelset/: README.md  inputs.i
regtest/bulk_fuel_consumption/: inputs.i
regtest/cheney_gould_grassfire/: inputs.i
regtest/crown_fire/crown_initiation/: README.md  inputs.i
regtest/crown_fire/cruz_crown_continental_us/: inputs.i
regtest/crown_fire/fmc_phenology_gdd/: README.md  inputs.i
regtest/crown_fire/fmc_phenology_sinusoidal/: README.md  inputs.i
regtest/crown_fire/fmc_seasonal/: inputs.i
regtest/crown_fire/rothermel1991_crown/: inputs.i
regtest/crown_fire/scott_reinhardt_cfsa/: README.md  inputs.i
regtest/crown_initiation/: inputs.i
regtest/cruz_crown_continental_us/: README.md
regtest/diagnostics/advanced_physics/: README.md  inputs.i
regtest/diagnostics/conditional_weather_bi/: cond_weather.csv  inputs.i
regtest/diagnostics/farsite_fsa_pst/: inputs.i
regtest/diagnostics/fire_behavior_diagnostics/: README.md  inputs.i
regtest/diagnostics/fl_exceedance/: inputs.i
regtest/diagnostics/kbdi_haines_indices/: inputs.i
regtest/diagnostics/phase1_phase2_features/: README.txt  inputs.i
regtest/diagnostics/scott_reinhardt_full_ti_ci/: inputs.i
regtest/diagnostics/scott_reinhardt_indices/: inputs.i
regtest/eb_implicit/: README.md  inputs.i
regtest/ellipse_sdf/: inputs.i
regtest/farsite_ellipse/: README_LANDSCAPE.md  inputs.i  inputs_landscape.i  socal_chaparral_landscape.lcp
regtest/features_10_integration/: README.md  inputs_features_demo.i
regtest/fire_coupling/one_way/: fire_inputs.i  test.py  wind_inputs.i
regtest/fire_coupling/two_way/: fire_inputs.i  test.py  wind_inputs.i
regtest/fire_perimeter_output/: validate.py
regtest/firebrand_spotting/: README.md  inputs.i
regtest/fuel/canadian_fwi/: README.md  inputs.i
regtest/fuel/duff_smoldering/: README.md  inputs.i
regtest/fuel/fuel_adj_file/: create_adj.py  inputs.i
regtest/fuel/two_fuel_blending/: README.md  inputs.i
regtest/gaussian_hill_wind_solver/: generate_terrain.py
regtest/ignition/barrier_polygons/: README.md  create_barriers.py  inputs.i
regtest/ignition/fire_perimeter_output/: inputs.i
regtest/ignition/kml_perimeter/: inputs.i  validate.py
regtest/ignition/polygon_ignition/: ignition_polygon.csv  inputs.i
regtest/ignition/polyline_ignition/: ignition_line.csv  inputs.i
regtest/ignition/satellite_assimilation/: README.md  create_detections.py  inputs.i
regtest/integration/crown_fire_phenology/: README.md  inputs.i  slope_terrain.csv
regtest/integration/diurnal_chaparral_fire/: README.md  inputs.i  terrain_hill.csv
regtest/integration/spotting_cascade_terrain/: README.md  inputs.i  ridge_valley_terrain.csv
regtest/landfire_farsite/: create_landscape.py  inputs.i  landscape.lcp
regtest/misc/3d_sphere/: README.md  inputs.i
regtest/misc/bulk_fuel_consumption/: README.md  inputs.i
regtest/misc/eb_implicit/: inputs.i
regtest/misc/landfire_farsite/: inputs.i
regtest/misc/mtt_propagation/: inputs.i
regtest/misc/nonburnable_mask/: create_landscape.py  inputs.i
regtest/misc/reentry_spotting/: inputs.i
regtest/misc/smoke_plume_rise/: inputs.i  validate.py
regtest/misc/timing_benchmark/: README.md  run_benchmark.py
regtest/moisture/cheney_gould_grassfire/: README.md  inputs.i
regtest/moisture/fmd_moisture/: create_fmd.py  inputs.i
regtest/moisture/fuel_moisture_timelag_de/: README.md  inputs.i
regtest/moisture/mcarthur_scaling/: README.md  inputs.i
regtest/moisture/multi_wtr_spatial/: README.md  create_stations.py  inputs.i
regtest/moisture/precip_wetting/: inputs.i
regtest/moisture/spatial_moisture_output/: inputs.i
regtest/moisture/wtr_diurnal/: create_wtr.py  inputs.i
regtest/moisture/wtr_rain_wetting/: create_wtr.py  inputs.i
regtest/mtt_propagation/: README.md
regtest/python_api/: README.md
regtest/python_api/basic_fire_solver/: inputs.i  test_fire_solver.py
regtest/python_api/coupled_wind_fire/: inputs.i  test_coupled_wind_fire.py
regtest/python_api/integrated_features_demo/: demo_integrated_features.py  inputs.i  simple_slope.csv
regtest/python_api/massconsistent_fire_coupling/: IMPLEMENTATION_SUMMARY.md  README.md  fire_inputs.i  test_massconsistent_coupling.py
regtest/reinitialization/: inputs.i
regtest/rothermel_fuel/: inputs.i
regtest/terrain_wind/: README.md  gaussian_hill_terrain.csv  gaussian_hill_wind.csv  inputs.i
regtest/terrain_wind_preprocess/: README.md  run_regtest.py
regtest/time_dependent_wind/: README.md  inputs.i  time_wind_1.csv
regtest/turb_wind/: README.md
regtest/windninja_ridge_canyon/: README.md
src/python/: CMakeLists.txt  COUPLING_GUIDE.md  README.md  __init__.py  coupled_solver.py  coupled_wind_fire_example.py  coupling_modes_example.py  example_integration.py  example_one_way_coupling.py  example_two_way_coupling.py  levelset_coupling.py  massconsistent_fire_coupling.py  pyWildfire.cpp  surface_flux_extractor.py  test_fire_solver_api.py  test_pywildfire.py  test_wind_fire_coupling.py  two_way_coupling_example.py  wildfire_solver.py  wind_solver_interface.py
(+793 files in other folders)
